# gzip-classifier

./: README.md  model.txt  pyproject.toml
