[project]
name = "gzip_classifier"
version = "1.0.0"
description = "A gzip-based text-classification system."
authors = [
    {name = "Brian Schrader",email = "brian@brianschrader.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
]
